--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4905,33 +4905,56 @@ Files inside this folder should contain all styles relating to a reusable compon
 .button-search { background-color: #5191d5; /* Ash */ border: none; color: white; padding: 5px 15px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px; cursor: pointer; -webkit-transition-duration: 0.4s; /* Safari */ transition-duration: 0.4s; }
 .button-search:hover { color: white; box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19); }
 
+.button-search[disabled] { cursor: not-allowed; opacity: 0.65; box-shadow: none; }
+
 .button-reset { background-color: #d56351; /* Ash */ border: none; color: white; padding: 5px 15px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px; cursor: pointer; -webkit-transition-duration: 0.4s; /* Safari */ transition-duration: 0.4s; }
 .button-reset:hover { color: white; box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19); }
 
-.button-edit { background-color: #c9c6c6; /* Ash */ border: none; color: white; padding: 5px 15px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px; cursor: pointer; -webkit-transition-duration: 0.4s; /* Safari */ transition-duration: 0.4s; font-size: 10px; width: 60px; height: 25px; padding: 5px 10px 5px 10px; }
+.button-reset[disabled] { cursor: not-allowed; opacity: 0.65; box-shadow: none; }
+
+.button-edit { background-color: #757070; /* Ash */ border: none; color: white; padding: 5px 15px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px; cursor: pointer; -webkit-transition-duration: 0.4s; /* Safari */ transition-duration: 0.4s; font-size: 10px; width: 60px; height: 25px; padding: 5px 10px 5px 10px; }
 .button-edit:hover { color: white; box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19); }
+
+.button-edit[disabled] { cursor: not-allowed; opacity: 0.65; box-shadow: none; }
+
+.button-banner-label-text { background-color: #5191d5; /* Ash */ border: none; color: white; padding: 5px 15px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px; cursor: pointer; -webkit-transition-duration: 0.4s; /* Safari */ transition-duration: 0.4s; font-size: 10px; width: 81px; height: 25px; border-radius: 2px; padding: 5px 10px 5px 10px; cursor: not-allowed; }
+.button-banner-label-text:hover { color: white; box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19); }
 
 .button-banner { background-color: #5191d5; /* Ash */ border: none; color: white; padding: 5px 15px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px; cursor: pointer; -webkit-transition-duration: 0.4s; /* Safari */ transition-duration: 0.4s; font-size: 10px; width: 81px; height: 25px; border-radius: 2px; padding: 5px 10px 5px 10px; }
 .button-banner:hover { color: white; box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19); }
 
-.button-small-edit { background-color: #c9c6c6; /* Ash */ border: none; color: white; padding: 5px 15px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px; cursor: pointer; -webkit-transition-duration: 0.4s; /* Safari */ transition-duration: 0.4s; font-size: 10px; width: 40px; height: 15px; padding: 0px 0px; }
+.button-banner[disabled] { cursor: not-allowed; opacity: 0.65; box-shadow: none; }
+
+.button-small-edit { background-color: #757070; /* Ash */ border: none; color: white; padding: 5px 15px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px; cursor: pointer; -webkit-transition-duration: 0.4s; /* Safari */ transition-duration: 0.4s; font-size: 10px; width: 40px; height: 15px; padding: 0px 0px; }
 .button-small-edit:hover { color: white; box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19); }
+
+.button-small-edit[disabled] { cursor: not-allowed; opacity: 0.65; box-shadow: none; }
 
 .button-small-verify { background-color: #1bb1a2; /* Ash */ border: none; color: white; padding: 5px 15px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px; cursor: pointer; -webkit-transition-duration: 0.4s; /* Safari */ transition-duration: 0.4s; font-size: 10px; width: 40px; height: 15px; padding: 0px 0px; }
 .button-small-verify:hover { color: white; box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19); }
 
+.button-small-verify[disabled] { cursor: not-allowed; opacity: 0.65; box-shadow: none; }
+
 .button-md-edit { background-color: #c9c6c6; /* Ash */ border: none; color: white; padding: 5px 15px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px; cursor: pointer; -webkit-transition-duration: 0.4s; /* Safari */ transition-duration: 0.4s; width: 70px; height: 30px; padding: 0px 0px; }
 .button-md-edit:hover { color: white; box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19); }
+
+.button-md-edit[disabled] { cursor: not-allowed; opacity: 0.65; box-shadow: none; }
 
 .button-md-verify { background-color: #1bb1a2; /* Ash */ border: none; color: white; padding: 5px 15px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px; cursor: pointer; -webkit-transition-duration: 0.4s; /* Safari */ transition-duration: 0.4s; width: 70px; height: 30px; padding: 0px 0px; }
 .button-md-verify:hover { color: white; box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19); }
 
+.button-md-verify[disabled] { cursor: not-allowed; opacity: 0.65; box-shadow: none; }
+
 .button-md-balance { background-color: #1bb1a2; /* Ash */ border: none; color: white; padding: 5px 15px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px; cursor: pointer; -webkit-transition-duration: 0.4s; /* Safari */ transition-duration: 0.4s; width: 200px; height: 30px; padding: 0px 0px; }
 .button-md-balance:hover { color: white; box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19); }
+
+.button-md-balance[disabled] { cursor: not-allowed; opacity: 0.65; box-shadow: none; }
 
 .btn-active-til { background-color: #019889; color: #fff; }
 
 .button-md-update { background-color: #1bb1a2; border: none; color: white; padding: 5px 15px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px; cursor: pointer; -webkit-transition-duration: 0.4s; transition-duration: 0.4s; width: 80px; height: 30px; padding: 0px 0px; }
+
+.button-md-update[disabled] { cursor: not-allowed; opacity: 0.65; box-shadow: none; }
 
 .dropdown { height: 30px; width: 50px; }
 
@@ -5200,30 +5223,30 @@ textarea:focus { /* sizes for the 2 images (focus state) */ background-size: 100
 @keyframes ball-grid-beat { 50% { opacity: 0.7; }
   100% { opacity: 1; } }
 .ball-grid-beat { width: 57px; }
-.ball-grid-beat > div:nth-child(1) { animation-delay: 0.29s; animation-duration: 1s; }
-.ball-grid-beat > div:nth-child(2) { animation-delay: 0.21s; animation-duration: 0.88s; }
-.ball-grid-beat > div:nth-child(3) { animation-delay: 0.7s; animation-duration: 1.02s; }
-.ball-grid-beat > div:nth-child(4) { animation-delay: 0.6s; animation-duration: 0.74s; }
-.ball-grid-beat > div:nth-child(5) { animation-delay: 0.79s; animation-duration: 1.25s; }
-.ball-grid-beat > div:nth-child(6) { animation-delay: 0.72s; animation-duration: 1.33s; }
-.ball-grid-beat > div:nth-child(7) { animation-delay: 0.76s; animation-duration: 1.4s; }
-.ball-grid-beat > div:nth-child(8) { animation-delay: 0.56s; animation-duration: 0.61s; }
-.ball-grid-beat > div:nth-child(9) { animation-delay: -0.04s; animation-duration: 1.31s; }
+.ball-grid-beat > div:nth-child(1) { animation-delay: 0.44s; animation-duration: 1.21s; }
+.ball-grid-beat > div:nth-child(2) { animation-delay: -0.01s; animation-duration: 1.17s; }
+.ball-grid-beat > div:nth-child(3) { animation-delay: 0.24s; animation-duration: 1.53s; }
+.ball-grid-beat > div:nth-child(4) { animation-delay: -0.01s; animation-duration: 1.35s; }
+.ball-grid-beat > div:nth-child(5) { animation-delay: 0.26s; animation-duration: 1.13s; }
+.ball-grid-beat > div:nth-child(6) { animation-delay: 0.16s; animation-duration: 1.09s; }
+.ball-grid-beat > div:nth-child(7) { animation-delay: 0.57s; animation-duration: 1.49s; }
+.ball-grid-beat > div:nth-child(8) { animation-delay: 0.46s; animation-duration: 0.95s; }
+.ball-grid-beat > div:nth-child(9) { animation-delay: 0.39s; animation-duration: 1.28s; }
 .ball-grid-beat > div { background-color: #1bb1a2; width: 15px; height: 15px; border-radius: 100%; margin: 2px; animation-fill-mode: both; display: inline-block; float: left; animation-name: ball-grid-beat; animation-iteration-count: infinite; animation-delay: 0; }
 
 @keyframes ball-grid-pulse { 0% { transform: scale(1); }
   50% { transform: scale(0.5); opacity: 0.7; }
   100% { transform: scale(1); opacity: 1; } }
 .ball-grid-pulse { width: 57px; }
-.ball-grid-pulse > div:nth-child(1) { animation-delay: -0.03s; animation-duration: 1.24s; }
-.ball-grid-pulse > div:nth-child(2) { animation-delay: -0.03s; animation-duration: 1.58s; }
-.ball-grid-pulse > div:nth-child(3) { animation-delay: 0.49s; animation-duration: 1.42s; }
-.ball-grid-pulse > div:nth-child(4) { animation-delay: -0.06s; animation-duration: 0.61s; }
-.ball-grid-pulse > div:nth-child(5) { animation-delay: 0.32s; animation-duration: 1.37s; }
-.ball-grid-pulse > div:nth-child(6) { animation-delay: 0.62s; animation-duration: 1.15s; }
-.ball-grid-pulse > div:nth-child(7) { animation-delay: 0.17s; animation-duration: 0.87s; }
-.ball-grid-pulse > div:nth-child(8) { animation-delay: -0.13s; animation-duration: 1.2s; }
-.ball-grid-pulse > div:nth-child(9) { animation-delay: 0.65s; animation-duration: 1.56s; }
+.ball-grid-pulse > div:nth-child(1) { animation-delay: -0.01s; animation-duration: 1.54s; }
+.ball-grid-pulse > div:nth-child(2) { animation-delay: 0.28s; animation-duration: 0.82s; }
+.ball-grid-pulse > div:nth-child(3) { animation-delay: 0.35s; animation-duration: 0.67s; }
+.ball-grid-pulse > div:nth-child(4) { animation-delay: 0.04s; animation-duration: 0.91s; }
+.ball-grid-pulse > div:nth-child(5) { animation-delay: 0.37s; animation-duration: 1.34s; }
+.ball-grid-pulse > div:nth-child(6) { animation-delay: 0.42s; animation-duration: 0.64s; }
+.ball-grid-pulse > div:nth-child(7) { animation-delay: -0.18s; animation-duration: 0.77s; }
+.ball-grid-pulse > div:nth-child(8) { animation-delay: 0.62s; animation-duration: 0.71s; }
+.ball-grid-pulse > div:nth-child(9) { animation-delay: 0.28s; animation-duration: 0.73s; }
 .ball-grid-pulse > div { background-color: #1bb1a2; width: 15px; height: 15px; border-radius: 100%; margin: 2px; animation-fill-mode: both; display: inline-block; float: left; animation-name: ball-grid-pulse; animation-iteration-count: infinite; animation-delay: 0; }
 
 @keyframes ball-spin-fade-loader { 50% { opacity: 0.3; transform: scale(0.4); }
@@ -5294,10 +5317,10 @@ textarea:focus { /* sizes for the 2 images (focus state) */ background-size: 100
 @keyframes line-scale-party { 0% { transform: scale(1); }
   50% { transform: scale(0.5); }
   100% { transform: scale(1); } }
-.line-scale-party > div:nth-child(1) { animation-delay: 0.22s; animation-duration: 0.54s; }
-.line-scale-party > div:nth-child(2) { animation-delay: 0.32s; animation-duration: 0.84s; }
-.line-scale-party > div:nth-child(3) { animation-delay: 0.73s; animation-duration: 1.01s; }
-.line-scale-party > div:nth-child(4) { animation-delay: 0.27s; animation-duration: 1.23s; }
+.line-scale-party > div:nth-child(1) { animation-delay: 0.13s; animation-duration: 1.27s; }
+.line-scale-party > div:nth-child(2) { animation-delay: 0.21s; animation-duration: 0.55s; }
+.line-scale-party > div:nth-child(3) { animation-delay: 0.64s; animation-duration: 0.37s; }
+.line-scale-party > div:nth-child(4) { animation-delay: 0.21s; animation-duration: 1.08s; }
 .line-scale-party > div { background-color: #1bb1a2; width: 4px; height: 35px; border-radius: 2px; margin: 2px; animation-fill-mode: both; display: inline-block; animation-name: line-scale-party; animation-iteration-count: infinite; animation-delay: 0; }
 
 @keyframes line-scale-pulse-out { 0% { transform: scaley(1); }
