--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4956,6 +4956,8 @@ Files inside this folder should contain all styles relating to a reusable compon
 
 .button-md-update[disabled] { cursor: not-allowed; opacity: 0.65; box-shadow: none; }
 
+.user-creation-span { display: inline-block; width: 5px; }
+
 .dropdown { height: 30px; width: 50px; }
 
 ul li ul.dropdown-hover { min-width: 100%; /* Set width of the dropdown */ background: #181717; display: none; position: absolute; z-index: 999; left: 0; }
@@ -4971,6 +4973,8 @@ table td a { color: #1bb1a2; }
 table td .fa-external-link { display: none; }
 
 table tr td:hover .fa-external-link { display: inline; }
+
+.verification-block { border-right: 1px solid #cdd0d4; height: 280px; }
 
 input[type=text] { width: 100%; padding: 5px 5px; box-sizing: border-box; border: 3px solid #ccc; -webkit-transition: 0.5s; transition: 0.5s; outline: none; border-radius: 4px; }
 input[type=text]:hover { border: 2px solid #1bb1a2; }
@@ -4991,6 +4995,8 @@ input[type=date] { width: 100%; padding: 5px 5px; box-sizing: border-box; border
 input[type=date]:hover { border: 2px solid #1bb1a2; }
 
 .input-sm, .input-group-sm > .form-control, .input-group-sm > .input-group-addon, .input-group-sm > .input-group-btn > .btn { padding-top: 0px !important; padding-bottom: 0px !important; width: 70% !important; }
+
+.user-name-field { width: 220px; height: 35px; }
 
 /* Reset Select */
 select { -webkit-appearance: none; -moz-appearance: none; -ms-appearance: none; appearance: none; outline: 0; box-shadow: none; border: 0 !important; background: #ffffff; background-image: none; }
@@ -5027,6 +5033,10 @@ select::-ms-expand { display: none; }
 .black-text { color: black; }
 
 .small-text { font-size: 12px; }
+
+.text-left { text-align: left; }
+
+.text-right { text-align: right; }
 
 .text-ash { color: #aca5a5; }
 
@@ -5068,7 +5078,15 @@ select::-ms-expand { display: none; }
 
 .margin-bottom-5 { margin-left: 5px; }
 
+.margin-top-20 { margin-top: 20px; }
+
+.margin-top-rem { margin-top: 0.2rem; }
+
 .row { margin: 0 !important; }
+
+.break-word { word-wrap: break-word; }
+
+.user-designation-style { align-items: flex-start; }
 
 .side-nav .nav li a:hover { border-bottom: 1px solid #1bb1a2; }
 
@@ -5079,6 +5097,8 @@ textarea { display: block; width: 100%; max-height: 200px; max-width: 100%; bord
 */ /* 2 imgs : 1px gray line (normal state) AND 2px green line (focus state) */ background-image: linear-gradient(to bottom, #1abc9c, #1bb1a2), linear-gradient(to bottom, silver, silver); /* sizes for the 2 images (default state) */ background-size: 0 2px, 100% 1px; /* positions for the 2 images. Change both "50%" to "0%" or "100%" and tri again */ background-position: 50% 100%, 50% 100%; /* animation solely on background-size */ transition: background-size 0.3s cubic-bezier(0.64, 0.09, 0.08, 1); }
 
 textarea:focus { /* sizes for the 2 images (focus state) */ background-size: 100% 2px, 100% 1px; outline: none; }
+
+.comment-textarea { width: 80%; height: 150px; }
 
 .custom-scrollable { max-height: 1000px; overflow: hidden; }
 
@@ -5095,6 +5115,70 @@ textarea:focus { /* sizes for the 2 images (focus state) */ background-size: 100
 .panel-label { background-color: #f5f5f5; color: #019889; }
 
 .text-label { padding-top: 10px; text-transform: uppercase; color: #019889; }
+
+.red { color: red; }
+
+.white { color: white; }
+
+.blue { color: blue; }
+
+.green { color: green; }
+
+.yellow { color: yellow; }
+
+.black { color: black; }
+
+.loadmore-color { color: #31b0d5; }
+
+.inprogress-color { color: #eb9316; }
+
+.verified-color { color: #5BC43C; }
+
+.alert-color { color: greenyellow; }
+
+.width-full { width: 100%; }
+
+.width-30 { width: 30px; }
+
+.width-50 { width: 50px; }
+
+.width-90 { width: 90px; }
+
+.width-100 { width: 100px; }
+
+.width-200 { width: 200px; }
+
+.width-220 { width: 220px; }
+
+.width-250 { width: 250px; }
+
+.width-300 { width: 300px; }
+
+.width-350 { width: 350px; }
+
+.width-500 { width: 500px; }
+
+.width-800 { width: 800px; }
+
+.height-500 { height: 500px; }
+
+.height-10 { height: 10px; }
+
+.height-40 { height: 40px; }
+
+.height-150-no-resize { height: 150px; resize: none; }
+
+.height-210 { height: 210px; }
+
+.height-320 { height: 320px; }
+
+.height-280 { height: 280px; }
+
+.height-650 { height: 650; }
+
+.min-height-width { min-height: 500px; width: 500px; }
+
+.font-size-50 { font-size: 50px; }
 
 /** Copyright (c) 2016 Connor Atherton  All animations must live in their own file in the animations directory and be included here.  */
 /** Styles shared by multiple animations */
@@ -5223,30 +5307,30 @@ textarea:focus { /* sizes for the 2 images (focus state) */ background-size: 100
 @keyframes ball-grid-beat { 50% { opacity: 0.7; }
   100% { opacity: 1; } }
 .ball-grid-beat { width: 57px; }
-.ball-grid-beat > div:nth-child(1) { animation-delay: 0.13s; animation-duration: 0.85s; }
-.ball-grid-beat > div:nth-child(2) { animation-delay: -0.17s; animation-duration: 1.17s; }
-.ball-grid-beat > div:nth-child(3) { animation-delay: 0.01s; animation-duration: 1.55s; }
-.ball-grid-beat > div:nth-child(4) { animation-delay: 0.08s; animation-duration: 1.55s; }
-.ball-grid-beat > div:nth-child(5) { animation-delay: 0.8s; animation-duration: 0.88s; }
-.ball-grid-beat > div:nth-child(6) { animation-delay: 0.17s; animation-duration: 1.26s; }
-.ball-grid-beat > div:nth-child(7) { animation-delay: 0.37s; animation-duration: 1.59s; }
-.ball-grid-beat > div:nth-child(8) { animation-delay: 0.19s; animation-duration: 1.13s; }
-.ball-grid-beat > div:nth-child(9) { animation-delay: 0.06s; animation-duration: 0.63s; }
+.ball-grid-beat > div:nth-child(1) { animation-delay: -0.04s; animation-duration: 0.9s; }
+.ball-grid-beat > div:nth-child(2) { animation-delay: -0.13s; animation-duration: 1.43s; }
+.ball-grid-beat > div:nth-child(3) { animation-delay: 0.44s; animation-duration: 1.57s; }
+.ball-grid-beat > div:nth-child(4) { animation-delay: 0.37s; animation-duration: 1.55s; }
+.ball-grid-beat > div:nth-child(5) { animation-delay: 0.21s; animation-duration: 0.84s; }
+.ball-grid-beat > div:nth-child(6) { animation-delay: 0.35s; animation-duration: 0.98s; }
+.ball-grid-beat > div:nth-child(7) { animation-delay: 0.11s; animation-duration: 1.53s; }
+.ball-grid-beat > div:nth-child(8) { animation-delay: 0.66s; animation-duration: 1.24s; }
+.ball-grid-beat > div:nth-child(9) { animation-delay: -0.05s; animation-duration: 0.83s; }
 .ball-grid-beat > div { background-color: #1bb1a2; width: 15px; height: 15px; border-radius: 100%; margin: 2px; animation-fill-mode: both; display: inline-block; float: left; animation-name: ball-grid-beat; animation-iteration-count: infinite; animation-delay: 0; }
 
 @keyframes ball-grid-pulse { 0% { transform: scale(1); }
   50% { transform: scale(0.5); opacity: 0.7; }
   100% { transform: scale(1); opacity: 1; } }
 .ball-grid-pulse { width: 57px; }
-.ball-grid-pulse > div:nth-child(1) { animation-delay: 0.24s; animation-duration: 0.88s; }
-.ball-grid-pulse > div:nth-child(2) { animation-delay: 0.32s; animation-duration: 1s; }
-.ball-grid-pulse > div:nth-child(3) { animation-delay: 0.07s; animation-duration: 1.34s; }
-.ball-grid-pulse > div:nth-child(4) { animation-delay: 0.44s; animation-duration: 1.33s; }
-.ball-grid-pulse > div:nth-child(5) { animation-delay: -0.12s; animation-duration: 0.96s; }
-.ball-grid-pulse > div:nth-child(6) { animation-delay: 0.53s; animation-duration: 0.7s; }
-.ball-grid-pulse > div:nth-child(7) { animation-delay: 0.31s; animation-duration: 1.04s; }
-.ball-grid-pulse > div:nth-child(8) { animation-delay: 0.16s; animation-duration: 0.89s; }
-.ball-grid-pulse > div:nth-child(9) { animation-delay: 0.38s; animation-duration: 1.55s; }
+.ball-grid-pulse > div:nth-child(1) { animation-delay: -0.17s; animation-duration: 1.52s; }
+.ball-grid-pulse > div:nth-child(2) { animation-delay: -0.08s; animation-duration: 0.65s; }
+.ball-grid-pulse > div:nth-child(3) { animation-delay: 0.25s; animation-duration: 1.38s; }
+.ball-grid-pulse > div:nth-child(4) { animation-delay: 0.69s; animation-duration: 1.27s; }
+.ball-grid-pulse > div:nth-child(5) { animation-delay: 0.42s; animation-duration: 1.15s; }
+.ball-grid-pulse > div:nth-child(6) { animation-delay: 0.51s; animation-duration: 1.46s; }
+.ball-grid-pulse > div:nth-child(7) { animation-delay: 0.6s; animation-duration: 0.89s; }
+.ball-grid-pulse > div:nth-child(8) { animation-delay: 0.07s; animation-duration: 0.97s; }
+.ball-grid-pulse > div:nth-child(9) { animation-delay: 0s; animation-duration: 1.56s; }
 .ball-grid-pulse > div { background-color: #1bb1a2; width: 15px; height: 15px; border-radius: 100%; margin: 2px; animation-fill-mode: both; display: inline-block; float: left; animation-name: ball-grid-pulse; animation-iteration-count: infinite; animation-delay: 0; }
 
 @keyframes ball-spin-fade-loader { 50% { opacity: 0.3; transform: scale(0.4); }
@@ -5317,10 +5401,10 @@ textarea:focus { /* sizes for the 2 images (focus state) */ background-size: 100
 @keyframes line-scale-party { 0% { transform: scale(1); }
   50% { transform: scale(0.5); }
   100% { transform: scale(1); } }
-.line-scale-party > div:nth-child(1) { animation-delay: 0.49s; animation-duration: 0.52s; }
-.line-scale-party > div:nth-child(2) { animation-delay: 0.34s; animation-duration: 0.46s; }
-.line-scale-party > div:nth-child(3) { animation-delay: 0.38s; animation-duration: 0.43s; }
-.line-scale-party > div:nth-child(4) { animation-delay: 0.15s; animation-duration: 0.38s; }
+.line-scale-party > div:nth-child(1) { animation-delay: 0.56s; animation-duration: 0.58s; }
+.line-scale-party > div:nth-child(2) { animation-delay: 0.35s; animation-duration: 0.94s; }
+.line-scale-party > div:nth-child(3) { animation-delay: 0.79s; animation-duration: 0.6s; }
+.line-scale-party > div:nth-child(4) { animation-delay: 0.09s; animation-duration: 0.86s; }
 .line-scale-party > div { background-color: #1bb1a2; width: 4px; height: 35px; border-radius: 2px; margin: 2px; animation-fill-mode: both; display: inline-block; animation-name: line-scale-party; animation-iteration-count: infinite; animation-delay: 0; }
 
 @keyframes line-scale-pulse-out { 0% { transform: scaley(1); }
@@ -5396,6 +5480,8 @@ textarea:focus { /* sizes for the 2 images (focus state) */ background-size: 100
 
 .menu-header { background: #1bb1a2; cursor: pointer; margin: 0; color: #ffffff; font-family: "Abril Fatface"; text-align: center; text-decoration: none; letter-spacing: 0px; font-size: large; min-height: 50px; padding-top: 3%; padding: 0; }
 
+.menu-expansion { background-color: #1bb1a2; border: 0px; position: relative; }
+
 .menu-container { background: #f4f7f9; cursor: pointer; margin: 0; min-height: -webkit-fill-available; position: fixed; }
 .menu-container a { text-decoration: none !important; color: black; font-size: 13px; }
 .menu-container li { padding: 10px 0px 10px 50px; margin: 0px; }
@@ -5411,6 +5497,12 @@ textarea:focus { /* sizes for the 2 images (focus state) */ background-size: 100
 .menu-container .bottom-menu { position: absolute; bottom: 0; min-width: 100%; }
 
 body { background: #ffffff; margin: 0; word-spacing: 3px; }
+
+.advanced-search { display: inline-block; width: 10px; }
+
+.user-profile-header { padding-bottom: 30px; padding-top: 30px; min-height: 490px; }
+
+.user-info-block { min-height: 490px; margin-left: 15px; }
 
 .slider { width: 400px; height: 1000px; position: fixed; top: 0; right: 0; background: white; box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19); }
 
