--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5016,7 +5016,7 @@ select::-ms-expand { display: none; }
 
 .select::after { -webkit-transition: .25s all ease; -o-transition: .25s all ease; transition: .25s all ease; }
 
-.select-sm { padding-top: 0px !important; padding-bottom: 0px !important; width: 70% !important; }
+.select-sm { padding-top: 0px !important; padding-bottom: 0px !important; width: 70% !important; height: 2.1em !important; }
 
 .select-md { padding-top: 0px !important; padding-bottom: 0px !important; width: 66% !important; }
 
@@ -5307,30 +5307,30 @@ textarea:focus { /* sizes for the 2 images (focus state) */ background-size: 100
 @keyframes ball-grid-beat { 50% { opacity: 0.7; }
   100% { opacity: 1; } }
 .ball-grid-beat { width: 57px; }
-.ball-grid-beat > div:nth-child(1) { animation-delay: 0.08s; animation-duration: 1.31s; }
-.ball-grid-beat > div:nth-child(2) { animation-delay: 0.08s; animation-duration: 0.93s; }
-.ball-grid-beat > div:nth-child(3) { animation-delay: 0.64s; animation-duration: 0.97s; }
-.ball-grid-beat > div:nth-child(4) { animation-delay: -0.17s; animation-duration: 0.63s; }
-.ball-grid-beat > div:nth-child(5) { animation-delay: -0.1s; animation-duration: 0.93s; }
-.ball-grid-beat > div:nth-child(6) { animation-delay: 0.56s; animation-duration: 1.49s; }
-.ball-grid-beat > div:nth-child(7) { animation-delay: 0.78s; animation-duration: 0.85s; }
-.ball-grid-beat > div:nth-child(8) { animation-delay: 0.17s; animation-duration: 1.55s; }
-.ball-grid-beat > div:nth-child(9) { animation-delay: 0.59s; animation-duration: 1.56s; }
+.ball-grid-beat > div:nth-child(1) { animation-delay: 0.48s; animation-duration: 1.44s; }
+.ball-grid-beat > div:nth-child(2) { animation-delay: -0.13s; animation-duration: 1.48s; }
+.ball-grid-beat > div:nth-child(3) { animation-delay: 0.44s; animation-duration: 1.57s; }
+.ball-grid-beat > div:nth-child(4) { animation-delay: -0.14s; animation-duration: 0.82s; }
+.ball-grid-beat > div:nth-child(5) { animation-delay: 0.77s; animation-duration: 0.79s; }
+.ball-grid-beat > div:nth-child(6) { animation-delay: 0.34s; animation-duration: 1.33s; }
+.ball-grid-beat > div:nth-child(7) { animation-delay: -0.08s; animation-duration: 1.25s; }
+.ball-grid-beat > div:nth-child(8) { animation-delay: -0.15s; animation-duration: 1.47s; }
+.ball-grid-beat > div:nth-child(9) { animation-delay: 0.78s; animation-duration: 1.53s; }
 .ball-grid-beat > div { background-color: #1bb1a2; width: 15px; height: 15px; border-radius: 100%; margin: 2px; animation-fill-mode: both; display: inline-block; float: left; animation-name: ball-grid-beat; animation-iteration-count: infinite; animation-delay: 0; }
 
 @keyframes ball-grid-pulse { 0% { transform: scale(1); }
   50% { transform: scale(0.5); opacity: 0.7; }
   100% { transform: scale(1); opacity: 1; } }
 .ball-grid-pulse { width: 57px; }
-.ball-grid-pulse > div:nth-child(1) { animation-delay: -0.07s; animation-duration: 1.1s; }
-.ball-grid-pulse > div:nth-child(2) { animation-delay: 0.69s; animation-duration: 0.68s; }
-.ball-grid-pulse > div:nth-child(3) { animation-delay: 0.05s; animation-duration: 1.26s; }
-.ball-grid-pulse > div:nth-child(4) { animation-delay: 0.39s; animation-duration: 0.78s; }
-.ball-grid-pulse > div:nth-child(5) { animation-delay: 0.72s; animation-duration: 1.46s; }
-.ball-grid-pulse > div:nth-child(6) { animation-delay: 0.16s; animation-duration: 0.97s; }
-.ball-grid-pulse > div:nth-child(7) { animation-delay: -0.09s; animation-duration: 1.5s; }
-.ball-grid-pulse > div:nth-child(8) { animation-delay: 0.48s; animation-duration: 1.51s; }
-.ball-grid-pulse > div:nth-child(9) { animation-delay: 0.68s; animation-duration: 0.62s; }
+.ball-grid-pulse > div:nth-child(1) { animation-delay: 0.09s; animation-duration: 0.79s; }
+.ball-grid-pulse > div:nth-child(2) { animation-delay: 0.01s; animation-duration: 0.81s; }
+.ball-grid-pulse > div:nth-child(3) { animation-delay: -0.11s; animation-duration: 1.13s; }
+.ball-grid-pulse > div:nth-child(4) { animation-delay: 0.59s; animation-duration: 1.58s; }
+.ball-grid-pulse > div:nth-child(5) { animation-delay: -0.02s; animation-duration: 1.57s; }
+.ball-grid-pulse > div:nth-child(6) { animation-delay: 0.53s; animation-duration: 0.71s; }
+.ball-grid-pulse > div:nth-child(7) { animation-delay: 0.32s; animation-duration: 1.38s; }
+.ball-grid-pulse > div:nth-child(8) { animation-delay: 0.33s; animation-duration: 1.14s; }
+.ball-grid-pulse > div:nth-child(9) { animation-delay: 0.11s; animation-duration: 1.39s; }
 .ball-grid-pulse > div { background-color: #1bb1a2; width: 15px; height: 15px; border-radius: 100%; margin: 2px; animation-fill-mode: both; display: inline-block; float: left; animation-name: ball-grid-pulse; animation-iteration-count: infinite; animation-delay: 0; }
 
 @keyframes ball-spin-fade-loader { 50% { opacity: 0.3; transform: scale(0.4); }
@@ -5401,10 +5401,10 @@ textarea:focus { /* sizes for the 2 images (focus state) */ background-size: 100
 @keyframes line-scale-party { 0% { transform: scale(1); }
   50% { transform: scale(0.5); }
   100% { transform: scale(1); } }
-.line-scale-party > div:nth-child(1) { animation-delay: 0.23s; animation-duration: 0.77s; }
-.line-scale-party > div:nth-child(2) { animation-delay: 0.39s; animation-duration: 0.7s; }
-.line-scale-party > div:nth-child(3) { animation-delay: 0.17s; animation-duration: 1.01s; }
-.line-scale-party > div:nth-child(4) { animation-delay: 0.21s; animation-duration: 0.44s; }
+.line-scale-party > div:nth-child(1) { animation-delay: 0.05s; animation-duration: 1.2s; }
+.line-scale-party > div:nth-child(2) { animation-delay: 0.61s; animation-duration: 1.01s; }
+.line-scale-party > div:nth-child(3) { animation-delay: 0.42s; animation-duration: 0.81s; }
+.line-scale-party > div:nth-child(4) { animation-delay: 0.1s; animation-duration: 0.4s; }
 .line-scale-party > div { background-color: #1bb1a2; width: 4px; height: 35px; border-radius: 2px; margin: 2px; animation-fill-mode: both; display: inline-block; animation-name: line-scale-party; animation-iteration-count: infinite; animation-delay: 0; }
 
 @keyframes line-scale-pulse-out { 0% { transform: scaley(1); }
