--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2127,7 +2127,7 @@ mark, .mark { background-color: #fcf8e3; padding: .2em; }
 
 .text-right { text-align: right; }
 
-.text-center { text-align: center; }
+.text-center { text-align: center !important; }
 
 .text-justify { text-align: justify; }
 
@@ -5307,30 +5307,30 @@ textarea:focus { /* sizes for the 2 images (focus state) */ background-size: 100
 @keyframes ball-grid-beat { 50% { opacity: 0.7; }
   100% { opacity: 1; } }
 .ball-grid-beat { width: 57px; }
-.ball-grid-beat > div:nth-child(1) { animation-delay: 0.48s; animation-duration: 1.44s; }
-.ball-grid-beat > div:nth-child(2) { animation-delay: -0.13s; animation-duration: 1.48s; }
-.ball-grid-beat > div:nth-child(3) { animation-delay: 0.44s; animation-duration: 1.57s; }
-.ball-grid-beat > div:nth-child(4) { animation-delay: -0.14s; animation-duration: 0.82s; }
-.ball-grid-beat > div:nth-child(5) { animation-delay: 0.77s; animation-duration: 0.79s; }
-.ball-grid-beat > div:nth-child(6) { animation-delay: 0.34s; animation-duration: 1.33s; }
-.ball-grid-beat > div:nth-child(7) { animation-delay: -0.08s; animation-duration: 1.25s; }
-.ball-grid-beat > div:nth-child(8) { animation-delay: -0.15s; animation-duration: 1.47s; }
-.ball-grid-beat > div:nth-child(9) { animation-delay: 0.78s; animation-duration: 1.53s; }
+.ball-grid-beat > div:nth-child(1) { animation-delay: -0.03s; animation-duration: 0.85s; }
+.ball-grid-beat > div:nth-child(2) { animation-delay: 0.02s; animation-duration: 1.13s; }
+.ball-grid-beat > div:nth-child(3) { animation-delay: 0.68s; animation-duration: 1.53s; }
+.ball-grid-beat > div:nth-child(4) { animation-delay: 0.44s; animation-duration: 0.95s; }
+.ball-grid-beat > div:nth-child(5) { animation-delay: -0.12s; animation-duration: 1.35s; }
+.ball-grid-beat > div:nth-child(6) { animation-delay: 0.14s; animation-duration: 1.06s; }
+.ball-grid-beat > div:nth-child(7) { animation-delay: 0.5s; animation-duration: 1.38s; }
+.ball-grid-beat > div:nth-child(8) { animation-delay: 0.36s; animation-duration: 0.65s; }
+.ball-grid-beat > div:nth-child(9) { animation-delay: -0.17s; animation-duration: 1.5s; }
 .ball-grid-beat > div { background-color: #1bb1a2; width: 15px; height: 15px; border-radius: 100%; margin: 2px; animation-fill-mode: both; display: inline-block; float: left; animation-name: ball-grid-beat; animation-iteration-count: infinite; animation-delay: 0; }
 
 @keyframes ball-grid-pulse { 0% { transform: scale(1); }
   50% { transform: scale(0.5); opacity: 0.7; }
   100% { transform: scale(1); opacity: 1; } }
 .ball-grid-pulse { width: 57px; }
-.ball-grid-pulse > div:nth-child(1) { animation-delay: 0.09s; animation-duration: 0.79s; }
-.ball-grid-pulse > div:nth-child(2) { animation-delay: 0.01s; animation-duration: 0.81s; }
-.ball-grid-pulse > div:nth-child(3) { animation-delay: -0.11s; animation-duration: 1.13s; }
-.ball-grid-pulse > div:nth-child(4) { animation-delay: 0.59s; animation-duration: 1.58s; }
-.ball-grid-pulse > div:nth-child(5) { animation-delay: -0.02s; animation-duration: 1.57s; }
-.ball-grid-pulse > div:nth-child(6) { animation-delay: 0.53s; animation-duration: 0.71s; }
-.ball-grid-pulse > div:nth-child(7) { animation-delay: 0.32s; animation-duration: 1.38s; }
-.ball-grid-pulse > div:nth-child(8) { animation-delay: 0.33s; animation-duration: 1.14s; }
-.ball-grid-pulse > div:nth-child(9) { animation-delay: 0.11s; animation-duration: 1.39s; }
+.ball-grid-pulse > div:nth-child(1) { animation-delay: -0.16s; animation-duration: 0.97s; }
+.ball-grid-pulse > div:nth-child(2) { animation-delay: 0.4s; animation-duration: 0.89s; }
+.ball-grid-pulse > div:nth-child(3) { animation-delay: 0.13s; animation-duration: 1.16s; }
+.ball-grid-pulse > div:nth-child(4) { animation-delay: 0.28s; animation-duration: 0.67s; }
+.ball-grid-pulse > div:nth-child(5) { animation-delay: 0.77s; animation-duration: 1.37s; }
+.ball-grid-pulse > div:nth-child(6) { animation-delay: 0.51s; animation-duration: 1.17s; }
+.ball-grid-pulse > div:nth-child(7) { animation-delay: 0.08s; animation-duration: 1.57s; }
+.ball-grid-pulse > div:nth-child(8) { animation-delay: 0.64s; animation-duration: 0.83s; }
+.ball-grid-pulse > div:nth-child(9) { animation-delay: -0.17s; animation-duration: 0.93s; }
 .ball-grid-pulse > div { background-color: #1bb1a2; width: 15px; height: 15px; border-radius: 100%; margin: 2px; animation-fill-mode: both; display: inline-block; float: left; animation-name: ball-grid-pulse; animation-iteration-count: infinite; animation-delay: 0; }
 
 @keyframes ball-spin-fade-loader { 50% { opacity: 0.3; transform: scale(0.4); }
@@ -5401,10 +5401,10 @@ textarea:focus { /* sizes for the 2 images (focus state) */ background-size: 100
 @keyframes line-scale-party { 0% { transform: scale(1); }
   50% { transform: scale(0.5); }
   100% { transform: scale(1); } }
-.line-scale-party > div:nth-child(1) { animation-delay: 0.05s; animation-duration: 1.2s; }
-.line-scale-party > div:nth-child(2) { animation-delay: 0.61s; animation-duration: 1.01s; }
-.line-scale-party > div:nth-child(3) { animation-delay: 0.42s; animation-duration: 0.81s; }
-.line-scale-party > div:nth-child(4) { animation-delay: 0.1s; animation-duration: 0.4s; }
+.line-scale-party > div:nth-child(1) { animation-delay: 0.7s; animation-duration: 1s; }
+.line-scale-party > div:nth-child(2) { animation-delay: 0.47s; animation-duration: 1.14s; }
+.line-scale-party > div:nth-child(3) { animation-delay: 0.49s; animation-duration: 1s; }
+.line-scale-party > div:nth-child(4) { animation-delay: 0.43s; animation-duration: 1.14s; }
 .line-scale-party > div { background-color: #1bb1a2; width: 4px; height: 35px; border-radius: 2px; margin: 2px; animation-fill-mode: both; display: inline-block; animation-name: line-scale-party; animation-iteration-count: infinite; animation-delay: 0; }
 
 @keyframes line-scale-pulse-out { 0% { transform: scaley(1); }
